--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Login Service",
   "main": "index.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/senthamizhgit/login-service/issues"
   },
-  "homepage": "https://github.com/senthamizhgit/login-service#readme"
+  "homepage": "https://github.com/senthamizhgit/login-service#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "joi": "^14.3.1",
+    "lodash": "^4.17.15"
+  }
 }
