--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
-    "mongoose": "^5.8.9"
+    "mongoose": "^5.8.9",
+    "validator": "^12.1.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
