--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/senthamizhgit/login-service#readme",
   "dependencies": {
+    "amqplib": "^0.5.5",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "joi": "^14.3.1",
